Applying review comments